# devblog

./: .gitignore  LICENSE  README.md  conftest.py  install-skill.sh  pyproject.toml
adapters/charon/: README.md  charon-devblog.tasks.yaml
adapters/claude-code/: CLAUDE.devblog.md  CLAUDE.skill.devblog.md  README.md  command-devblog.md
adapters/codex/: AGENTS.devblog.md  README.md  codex-command.txt
adapters/hermes/: README.md  cron-prompt.txt  cronjob.example.json
adapters/opencode/: README.md  opencode-command.txt
adapters/pi-agent/: README.md  pi-devblog.prompt.md
docs/: integrations.md
examples/: config.example.json  config.example.yaml
registries/: AGENTS.md  CLAUDE.md  SKILL.md  skills.json
spec/: README.md  adapters.md  architecture.md  config.schema.yaml  post-template.md  state.schema.json  visibility.md
src/devblog/: cli.py  server.py  visibility.py
templates/: entry-prompt.md
tests/: test_install_adapter.py  test_model_config.py  test_multi_agent_notes.py  test_visibility.py
